compiler/tests/liva/errors/e0901_bool_exhaustiveness.liva
// Error Test: E0901 — Non-exhaustive bool switch (missing false)
// EXPECT: E0901
main() {
    let flag = true
    let msg = switch flag {
        true => "yes"
    }
    print(msg)
}
